--- a/views/post.ejs
+++ b/views/post.ejs
@@ -162,11 +162,15 @@
 										<p>Uploaded by <%= posts[i]['userName'] %></p>
 									  </div>
 									  <div class="post-actions">
-										<button class="like-btn" data-likes="5">
-										  <i class="fas fa-heart"></i> <span class="like-count">5</span>
-										</button>
+										<form action="/like/<%=posts[i]['id'] %>" method="post" enctype="multipart/form-data">
+											<button type="submit" class="like-btn" data-likes="5">
+												<i class="fas fa-heart"></i> <span class="like-count"><%= posts[i].likes%></span>
+											  </button>
+										</form>
 										<button class="comment-btn" data-comments="3">
-										  <i class="fas fa-comment"></i> <span class="comment-count">3</span>
+											
+										  <i class="fas fa-comment"></i> <span class="comment-count"><%= posts[i].comments.length%></span>
+										 
 										</button>
 									  </div>
 									  <div class="comments-section" style="display: none;">
