--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -278,6 +278,10 @@
           </li>
 
           <li class="active">
+            <a href="/friend"><span class="fa fa-plus mr-3"></span> </a>
+          </li>
+
+          <li class="active">
             <a href="/groups"><span class="fa fa-group mr-3"></span> </a>
           </li>
           
