--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -341,7 +341,7 @@
       <div id="content" class="">
 
         <!-- New header menu -->
-        <div class="header-menu">
+        <div class="header-menu" style="position: sticky;">
           <ul class="header-nav">
             <li><a href="/dashboard"><span class="fa fa-home"></span> Home</a></li>
             <li><a href="/dashboard"><span class="fa fa-envelope"></span> Messages</a></li>
