--- a/views/otp.ejs
+++ b/views/otp.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sign In</title>
+        <title>OTP Verification</title>
         <link rel="stylesheet" href="/css/login.css">
     </head>
 
@@ -15,28 +15,26 @@
     }
 %>
     <body style="background: #949494">
-        <form action="" method="post">
+        <form action="/verify-otp" method="post" enctype="multipart/form-data">
         <div class="box">
             <div class="form">
                 
-                    <h2>Sign In</h2>
+                    <h2>OTP Verification</h2>
                 <div class="inputbox">
-                    <input type="text" name="email" required 
-                        value>
-                    <span>Username</span>
+                    <input type="email" name="email" id="email" required>
+                    <span>Email Address</span>
                     <i></i>
                 </div>
                 <div class="inputbox">
-                    <input type="password" name="password" required>
-                    <span>Password</span>
+                    <input type="text" name="otp" id="otp" required>
+                    <span>Enter OTP</span>
                     <i></i>
                 </div>
                 <div class="links">
-                    <a href="/forgot-password">Forget Password?</a>
-                    <a href="/register">Signup</a>
+                    <a href="/forgot-password">Resend OTP</a>
+                    <a href="/">Back to Login</a>
                 </div>
-                <input type="submit" value="Login">
-                    
+                <input type="submit" value="Verify OTP">
                     
             </div>
         </div>
